tests/baselines/reference/moduleAndInterfaceSharingName2.errors.txt
moduleAndInterfaceSharingName2.ts(7,5): error TS2322: Type 'null' is not assignable to type 'Z'.
moduleAndInterfaceSharingName2.ts(8,9): error TS2315: Type 'Y' is not generic.


==== moduleAndInterfaceSharingName2.ts (2 errors) ====
    namespace X {
        export namespace Y {
            export interface Z { }
        }
        export interface Y { }
    }
    var z: X.Y.Z = null;
        ~
!!! error TS2322: Type 'null' is not assignable to type 'Z'.
    var z2: X.Y<string>;
            ~~~~~~~~~~~
!!! error TS2315: Type 'Y' is not generic.